# session-open-group-server-python

./: bot.ini.sample  captcha.ini.sample  install-uwsgi.md  plugins-captcha.md  setup.cfg
contrib/: uwsgi-sogs-standalone.ini
contrib/docker/: DockerFile.dev
contrib/upgrade-tests/: dump-db.py
sogs/: __main__.py  bot.py  captcha.py  challenge_bot.py  config.py  emoji_list.py  mule.py  omq.py  plugins_interface.py  schema.pgsql  schema.sqlite
sogs/migrations/: blind25.py  fix_info_update_triggers.py  new_tables.py
sogs/model/: room.py  user.py
sogs/plugins/: __init__.py  captcha.py  captcha_plugin.py
sogs/routes/: auth.py  messages.py  rooms.py
tests/: auth.py  test_reactions.py  user.py
