[metadata]

name = sogs
version = attr: sogs.__version__

[options]

zip_safe=False
include_package_data=True
packages=find:
install_requires=
    flask
    coloredlogs
    cryptography
    PyNaCl
    Pillow
    protobuf
    pyOpenSSL
    qrcode
    better_profanity
    oxenmq
    oxenc
    sqlalchemy
    session_util
    exif
    python_magic
setup_requires=
    tomli
